--- a/core/templates/core/attendance_wizard.html
+++ b/core/templates/core/attendance_wizard.html
@@ -7,6 +7,7 @@
   <title>Attendance Sheet Wizard - Exam Management</title>
   <link rel="stylesheet" href="{% static 'core/css/dash_board.css' %}?v=3">
   <link rel="stylesheet" href="{% static 'core/css/attendance_wizard.css' %}">
+  <link rel="stylesheet" href="{% static 'core/css/attendance_sheet_print.css' %}">
 </head>
 <body>
 
